Use Executors.newCachedThreadPool() for Android compatibility